# grvl-zephyr-calendar-demo

./: .ci.yml  CMakeLists.txt  Kconfig  README.md  prj.conf  west.yml
boards/: native_sim_64.overlay  stm32h747i_disco_stm32h747xx_m7.conf  stm32h747i_disco_stm32h747xx_m7.overlay
romfs/: gui.xml
romfs/fonts/: mona10.font  mona10.gbf  mona12.font  mona12.gbf  mona14.font  mona14.gbf  mona16.font  mona16.gbf
scripts/: sdcard.sh
src/: grvl.cpp  main.cpp
zephyr/: patches.yml
zephyr/patches/: change-memory-region-used-by-malloc.patch  lib-Implement-POSIX-read-write-poll-etc-on-stdio.patch  tests-posix-add-POSIX-DEVICE-IO-testsuite.patch  tests-posix-device-io-Update-tests-for-working-select-poll.patch  tests-posix-fs-Add-test-for-fdopen.patch  zvfs-improve-libc-FILE-to-integer-fd-abstraction.patch
